tests/kuttl/tests/ovn_liveness/02-assert.yaml
#
# Check for:
#
# - LivenessProbe in ovn-controller should be restart it once
#
apiVersion: v1
kind: Pod
metadata:
  labels:
    service: ovn-controller
status:
  containerStatuses:
    - name: ovn-controller
      restartCount: 1
