tests/kuttl/tests/ovn_liveness/03-assert.yaml
#
# Check for:
#
# - LivenessProbe failure in ovn-northd should restart it at least once
#

apiVersion: v1
kind: Pod
metadata:
  labels:
    service: ovn-northd
status:
  containerStatuses:
    - name: ovn-northd
      restartCount: 1
