tests/kuttl/tests/ovn_liveness/05-assert.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ovn-northd
spec:
  replicas: 2
status:
  readyReplicas: 2
